spiceparser/eqn.h

typedef enum itemop_e
{
  OPeolist,
  OPeol_const,  /* special terminator, for constant (reduced memory usage) */
  OPeol_valp,  /* special terminator, for indirection (float *) */
  OPeol_qty,   /* for simplified decoding of eol */

  OPlit,
  OPlitm,
  OPlitv,
  OPlitvm,

  OPval,
  OPvalm,
  OPadd,
  OPsub,

  OPmul,
  OPdiv,
  OPexp,
  OPopen,

  OPclose
}itemop_t;
typedef int eqn_litref_t;
typedef struct eqntokenlit_st
{
  char *lit;
  eqn_litref_t ref;
  float cache;
}eqntokenlit_t;
typedef struct eqntokenval_st
{
  float x;
}eqntokenval_t;
typedef struct eqntokenpval_st
{
  float *xp;
} eqntokenpval_t;
typedef struct eqntoken_st
{
  itemop_t op;
  union lit_val_un
  {
    eqntokenlit_t lit;
    eqntokenval_t val;
    eqntokenpval_t pval;
  }z;
}eqntoken_t;
typedef struct eqntop_st
{
  char *str;
  char last;

  eqntoken_t nodes[MAXEQNSTACK];
  int nodep;

  int litc;
  int opc;
}eqntop_t;
typedef struct plookup_st
{
  eqn_litref_t (*lookup)(struct plookup_st *user, char *str);
  void *user;
}plookup_t;
typedef struct eqneval_st
{
  float stack[MAXSTACK];
  int stackp;
  eqntoken_t *list;

}eqneval_t;
typedef struct eqn_st
{
#ifdef NO_EQUATIONS
  float val;
#else
  eqntoken_t *eqn;  
#endif
}eqn_t;
eqn_t eqn_const(float val);