spiceparser/spiceparser.py


# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/names.h: 55
if hasattr(_libs['spiceparser'], 'names_lookup'):
    names_lookup = _libs['spiceparser'].names_lookup
    names_lookup.argtypes = [POINTER(names_t), c_int]
    if sizeof(c_int) == sizeof(c_void_p):
        names_lookup.restype = ReturnString
    else:
        names_lookup.restype = String
        names_lookup.errcheck = ReturnString

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/names.h: 56
if hasattr(_libs['spiceparser'], 'names_check'):
    names_check = _libs['spiceparser'].names_check
    names_check.argtypes = [POINTER(names_t), String]
    names_check.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/names.h: 57
if hasattr(_libs['spiceparser'], 'names_add'):
    names_add = _libs['spiceparser'].names_add
    names_add.argtypes = [POINTER(names_t), c_int, String]
    names_add.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/names.h: 58
if hasattr(_libs['spiceparser'], 'names_new'):
    names_new = _libs['spiceparser'].names_new
    names_new.argtypes = []
    names_new.restype = POINTER(names_t)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/names.h: 59
if hasattr(_libs['spiceparser'], 'names_free'):
    names_free = _libs['spiceparser'].names_free
    names_free.argtypes = [POINTER(names_t)]
    names_free.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/names.h: 60
if hasattr(_libs['spiceparser'], 'names_rehash'):
    names_rehash = _libs['spiceparser'].names_rehash
    names_rehash.argtypes = [POINTER(names_t), c_int]
    names_rehash.restype = None

uchar = c_ubyte # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 30

uint = c_uint # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 36

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 43
class struct_hashbin_st(Structure):
    pass

struct_hashbin_st.__slots__ = [
    'next',
    'size',
]
struct_hashbin_st._fields_ = [
    ('next', POINTER(struct_hashbin_st)),
    ('size', c_int),
]

hashbin_t = struct_hashbin_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 48

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 59
class struct_hash_st(Structure):
    pass

struct_hash_st.__slots__ = [
    'uniq',
    'hashfunc',
    'hashcmp',
    'qbin',
    'bins',
    'qalloc',
    'alloc',
]
struct_hash_st._fields_ = [
    ('uniq', c_int),
    ('hashfunc', CFUNCTYPE(UNCHECKED(uint), c_int, POINTER(None), c_int)),
    ('hashcmp', CFUNCTYPE(UNCHECKED(c_int), c_int, POINTER(None), c_int, POINTER(None))),
    ('qbin', c_int),
    ('bins', POINTER(POINTER(hashbin_t))),
    ('qalloc', c_int),
    ('alloc', POINTER(POINTER(None))),
]

hash_t = struct_hash_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 59

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 67
if hasattr(_libs['spiceparser'], 'hash_new'):
    hash_new = _libs['spiceparser'].hash_new
    hash_new.argtypes = [c_int, CFUNCTYPE(UNCHECKED(uint), c_int, POINTER(None), c_int), CFUNCTYPE(UNCHECKED(c_int), c_int, POINTER(None), c_int, POINTER(None))]
    hash_new.restype = POINTER(hash_t)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 73
if hasattr(_libs['spiceparser'], 'hash_free'):
    hash_free = _libs['spiceparser'].hash_free
    hash_free.argtypes = [POINTER(hash_t)]
    hash_free.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 74
if hasattr(_libs['spiceparser'], 'hash_find'):
    hash_find = _libs['spiceparser'].hash_find
    hash_find.argtypes = [POINTER(hash_t), POINTER(None), c_int]
    hash_find.restype = POINTER(None)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 75
if hasattr(_libs['spiceparser'], 'hash_add'):
    hash_add = _libs['spiceparser'].hash_add
    hash_add.argtypes = [POINTER(hash_t), POINTER(None), c_int]
    hash_add.restype = POINTER(None)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 76
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'hash_alloc'):
        continue
    hash_alloc = _lib.hash_alloc
    hash_alloc.argtypes = [POINTER(hash_t), POINTER(None)]
    hash_alloc.restype = POINTER(None)
    break

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 77
if hasattr(_libs['spiceparser'], 'hash_size'):
    hash_size = _libs['spiceparser'].hash_size
    hash_size.argtypes = [POINTER(None)]
    hash_size.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 81
if hasattr(_libs['spiceparser'], 'hash_strhash'):
    hash_strhash = _libs['spiceparser'].hash_strhash
    hash_strhash.argtypes = [c_int, POINTER(None), c_int]
    hash_strhash.restype = c_uint

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 82
if hasattr(_libs['spiceparser'], 'hash_binhash'):
    hash_binhash = _libs['spiceparser'].hash_binhash
    hash_binhash.argtypes = [c_int, POINTER(None), c_int]
    hash_binhash.restype = c_uint

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 94
class struct_hash_ptrflagstr_st(Structure):
    pass

struct_hash_ptrflagstr_st.__slots__ = [
    'ptr',
    'flag',
]
struct_hash_ptrflagstr_st._fields_ = [
    ('ptr', POINTER(None)),
    ('flag', c_char),
]

hclient_ptrflagstr_t = struct_hash_ptrflagstr_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 94

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 96
if hasattr(_libs['spiceparser'], 'hclient_ptrflagstr_hash'):
    hclient_ptrflagstr_hash = _libs['spiceparser'].hclient_ptrflagstr_hash
    hclient_ptrflagstr_hash.argtypes = [c_int, POINTER(None), c_int]
    hclient_ptrflagstr_hash.restype = uint

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 104
if hasattr(_libs['spiceparser'], 'hclient_bobject_hash'):
    hclient_bobject_hash = _libs['spiceparser'].hclient_bobject_hash
    hclient_bobject_hash.argtypes = [c_int, POINTER(None), c_int]
    hclient_bobject_hash.restype = uint

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 105
if hasattr(_libs['spiceparser'], 'hclient_bobject_cmp'):
    hclient_bobject_cmp = _libs['spiceparser'].hclient_bobject_cmp
    hclient_bobject_cmp.argtypes = [c_int, POINTER(None), c_int, POINTER(None)]
    hclient_bobject_cmp.restype = c_int

enum_itemop_e = c_int # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPeolist = 0 # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPeol_const = (OPeolist + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPeol_valp = (OPeol_const + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPeol_qty = (OPeol_valp + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPlit = (OPeol_qty + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPlitm = (OPlit + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPlitv = (OPlitm + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPlitvm = (OPlitv + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPval = (OPlitvm + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPvalm = (OPval + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPadd = (OPvalm + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPsub = (OPadd + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPmul = (OPsub + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPdiv = (OPmul + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPexp = (OPdiv + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPopen = (OPexp + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

OPclose = (OPopen + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

itemop_t = enum_itemop_e # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 75

eqn_litref_t = c_int # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 105

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 113
class struct_eqntokenlit_st(Structure):
    pass

struct_eqntokenlit_st.__slots__ = [
    'lit',
    'ref',
    'cache',
]
struct_eqntokenlit_st._fields_ = [
    ('lit', String),
    ('ref', eqn_litref_t),
    ('cache', c_float),
]

eqntokenlit_t = struct_eqntokenlit_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 113

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 119
class struct_eqntokenval_st(Structure):
    pass

struct_eqntokenval_st.__slots__ = [
    'x',
]
struct_eqntokenval_st._fields_ = [
    ('x', c_float),
]

eqntokenval_t = struct_eqntokenval_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 119

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 124
class struct_eqntokenpval_st(Structure):
    pass

struct_eqntokenpval_st.__slots__ = [
    'xp',
]
struct_eqntokenpval_st._fields_ = [
    ('xp', POINTER(c_float)),
]

eqntokenpval_t = struct_eqntokenpval_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 124

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 129
class union_lit_val_un(Union):
    pass

union_lit_val_un.__slots__ = [
    'lit',
    'val',
    'pval',
]
union_lit_val_un._fields_ = [
    ('lit', eqntokenlit_t),
    ('val', eqntokenval_t),
    ('pval', eqntokenpval_t),
]

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 135
class struct_eqntoken_st(Structure):
    pass

struct_eqntoken_st.__slots__ = [
    'op',
    'z',
]
struct_eqntoken_st._fields_ = [
    ('op', itemop_t),
    ('z', union_lit_val_un),
]

eqntoken_t = struct_eqntoken_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 135

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 151
class struct_eqntop_st(Structure):
    pass

struct_eqntop_st.__slots__ = [
    'str',
    'last',
    'nodes',
    'nodep',
    'litc',
    'opc',
]
struct_eqntop_st._fields_ = [
    ('str', String),
    ('last', c_char),
    ('nodes', eqntoken_t * 512),
    ('nodep', c_int),
    ('litc', c_int),
    ('opc', c_int),
]

eqntop_t = struct_eqntop_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 151

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 155
class struct_plookup_st(Structure):
    pass

struct_plookup_st.__slots__ = [
    'lookup',
    'user',
]
struct_plookup_st._fields_ = [
    ('lookup', CFUNCTYPE(UNCHECKED(eqn_litref_t), POINTER(struct_plookup_st), String)),
    ('user', POINTER(None)),
]

plookup_t = struct_plookup_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 159

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 168
class struct_eqneval_st(Structure):
    pass

struct_eqneval_st.__slots__ = [
    'stack',
    'stackp',
    'list',
]
struct_eqneval_st._fields_ = [
    ('stack', c_float * 512),
    ('stackp', c_int),
    ('list', POINTER(eqntoken_t)),
]

eqneval_t = struct_eqneval_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 168

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 178
class struct_eqn_st(Structure):
    pass

struct_eqn_st.__slots__ = [
    'eqn',
]
struct_eqn_st._fields_ = [
    ('eqn', POINTER(eqntoken_t)),
]

eqn_t = struct_eqn_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 178

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 182
if hasattr(_libs['spiceparser'], 'eqn_const'):
    eqn_const = _libs['spiceparser'].eqn_const
    eqn_const.argtypes = [c_float]
    eqn_const.restype = eqn_t
